--- a/examples/smartring_data/Analysing_Smart_Ring_Data.ipynb
+++ b/examples/smartring_data/Analysing_Smart_Ring_Data.ipynb
@@ -227,7 +227,7 @@
    "source": [
     "#Run the analysis. Using 'high_precision' means a spline will\n",
     "#be fitted to all peaks and then the maximum determined.\n",
-    "#this means we can have a much higher peak accuracy than \n",
+    "#this means we can have a much higher peak position accuracy than \n",
     "#the 32Hz would allow\n",
     "\n",
     "wd, m = hp.process(filtered_ppg, sample_rate=sample_rate,\n",
