fix mistakes in noisy ecg analysis notebook

--- a/examples/noisy_ECG/Analysing_Noisy_ECG.ipynb
+++ b/examples/noisy_ECG/Analysing_Noisy_ECG.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "-----------\n",
     "\n",
-    "Now let's run the analysis. We scale the data after filtering using ***hp.scale_data()***, which is a linear operation and so doesn't "
+    "Now let's run the analysis. We scale the data after filtering using ***hp.scale_data()*** to standardize amplitude. This is a linear operation and so doesn't affect temporal position of data. "
    ]
   },
   {
@@ -379,7 +379,7 @@
     "\n",
     "ECG generally has very narrow peaks. Filtering usually keeps the maximum at the same place but can narrow the waveform further, causing issues. \n",
     "\n",
-    "Because HeartPy was designed for much wider PPG waveforms, upsampling generally does the trick and doesn't move change relative peak positions:"
+    "Because HeartPy was designed for much wider PPG waveforms, upsampling generally does the trick as it gives more datapoints per peak. It doesn't move change relative peak positions:"
    ]
   },
   {
@@ -484,9 +484,11 @@
     "\n",
     "Most QRS-complexes are still visible if you know what to look for, although the amplitude of the noise is relatively quite large and at points noise spikes coincide with the QRS-complex, masking it.\n",
     "\n",
-    "Since HeartPy 1.2.5 there's a function called ***enhance_ecg_peaks(data, sample_rate)***.\n",
+    "Since HeartPy 1.2.4 there's a function called ***enhance_ecg_peaks(data, sample_rate)***.\n",
     "\n",
-    "The function generates a set of synthetic QRS complexes of different widths and shapes based on the sample_rate, and convolves the signal with each synthetic QRS complex. The convolution will react strongly to anything that looks like it, but not to other shapes (or sizes!). This has the effect of improving signal-to-noise ratio without influencing peak positions.\n",
+    "The function generates a set of synthetic QRS complexes of different widths and shapes based on the sample_rate, and convolves the signal with each synthetic QRS complex. The convolution will react strongly to anything that looks like it, but not to other shapes (or sizes!). This has the effect of improving signal-to-noise ratio without influencing peak positions. \n",
+    "\n",
+    "The function can be set to iterate several rounds of convolutions to improve signal to noise ratio. Beware, though, that if you use too many iterations (generally 14 to 16 or more), overtones start appearing in the signal that distort peak positions. Generally 4-5 iterations is sufficient. By default the function does 4 iterations.\n",
     "\n",
     "Let's give it a spin:"
    ]
