fix mistakes in tutorial notebooks

--- a/examples/regular_PPG/Analysing_a_PPG_signal.ipynb
+++ b/examples/regular_PPG/Analysing_a_PPG_signal.ipynb
@@ -28,12 +28,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "HeartPy comes with a function ***load_exampledata()*** that can load the datasets provded. It will return a tuple (data, timer), where 'timer' is the timer column (ms, or datetime). If no timer column is available a tuple is still returned, but with timer being empty.\n",
+    "HeartPy comes with a function ***load_exampledata()*** that can load the datasets provded. It will return a tuple (data, timer), where 'timer' is the timer column (ms or datetime). If no timer column is available a tuple is still returned, but with timer array being empty.\n",
     "\n",
-    "There's three datasets included:\n",
+    "There's three datasets included with HeartPy:\n",
     "- 0 : a short, very clean PPG signal, sampled at 100.0 Hz\n",
-    "- 1 : a longer PPG signal, with missing signal in first third, and random noise spikes in rest of signal\n",
-    "- 2 : a very long PPG signal recorded 'in the wild' while driving in a driving simulator"
+    "- 1 : a slightly longer (~2 minute) PPG signal, with missing signal in first third, and random noise spikes in rest of signal\n",
+    "- 2 : a long (~11.5 minute) PPG signal recorded 'in the wild' while driving in a driving simulator using a Pulse Sensor on the index finger and an Arduino\n",
+    "\n",
+    "---------\n",
+    "\n",
+    "Let's go through all three examples and run an analysis for each."
    ]
   },
   {
@@ -70,7 +74,7 @@
    "source": [
     "#### That is a beautiful signal. Analysis should pose no issue\n",
     "\n",
-    "when running ***hp.process()***, two dicts are returned: working_data (containing temp measures that you may want to access nonetheless), and measures (containing the computed output measures).\n",
+    "when running ***hp.process()***, two dicts are returned: working_data (containing working data that you may want to access nonetheless, like peak positions and peak-peak intervals), and measures (containing the computed output measures).\n",
     "\n",
     "In the docs we abbreviate these to **'wd'** and **'m'**"
    ]
@@ -182,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's no signal in the beginning, and after the signal commences there's a few noise spikes as I forcefully moved the sensor while recording. This imitates what may happen when recording 'in the wild' as well.\n",
+    "This is a more tricky signal I made intentionally. There's no signal in the beginning as I started recording before and while putting on the sensor. After the signal commences there's a few noise spikes as I forcefully moved the sensor while recording. This imitates what may happen when recording 'in the wild' as well if the participant moves and accidentally tugs at a sensor cable.\n",
     "\n",
     "HeartPy is designed to handle this sort of thing out of the box. Let's look at the example first:"
    ]
@@ -242,7 +246,7 @@
     "\n",
     "HeartPy comes with two functions: ***hp.get_samplerate_mstimer()*** that computes sample rate based on a ms-timer, and ***hp.get_samplerate_datetime()***, that computes sample_rate based on a column in datetime values.\n",
     "\n",
-    "You saw how we used the mstimer, now let's look at a 'in the wild' recording that uses datetime strings to encode time:"
+    "You saw how we used the mstimer earlier, now let's look at a 'in the wild' recording that uses datetime strings to encode time:"
    ]
   },
   {
@@ -307,7 +311,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Finished in 0.243624 sec\n"
+      "Finished in 0.312511 sec\n"
      ]
     },
     {
